# discord-agent-gateway

./: .env.example  .gitignore  README.md  agent_gateway.py  pyproject.toml
discord_agent_gateway/: api.py  attachments.py  bot.py  cli.py  config.py  db.py  discord_api.py  docs.py  logging_setup.py  models.py  profile_sync.py  rate_limit.py  util.py  webhook.py
discord_agent_gateway/api/: __init__.py  admin_routes.py  agent_routes.py  deps.py  doc_routes.py  schemas.py  state.py
discord_agent_gateway/templates/: admin.html  heartbeat.md  messaging.md  skill.md
tests/: test_api.py  test_config.py  test_db.py  test_profile_sync.py  test_util.py
